docs/css/global.css
body {
    /* background-color: #1C1C1C; */
    background: radial-gradient(circle, rgba(255, 255, 255, 0.07) 0%, #ffffff00 75%);
    color: white;
    font-size: 16pt;
    font-family: Arial, Helvetica, sans-serif;
    padding-top: 200pt;
    padding-bottom: 200pt;
}

html {
    margin: 0;
    padding: 0;

    /* https://www.magicpattern.design/tools/css-backgrounds */
    opacity: 1;
    background-image:  linear-gradient(135deg, #191919 25%, transparent 25%), linear-gradient(225deg, #191919 25%, transparent 25%), linear-gradient(45deg, #191919 25%, transparent 25%), linear-gradient(315deg, #191919 25%, #000000 25%);
    background-position:  40px 0, 40px 0, 0 0, 0 0;
    background-size: 40px 40px;
    background-repeat: repeat;
}

@media screen and (max-width: 680px) {
    body {
        padding-top: 50pt;
        padding-bottom: 200pt;
    }

}

